--- a/views/home.ejs
+++ b/views/home.ejs
@@ -824,7 +824,7 @@
 
         <!-- services area end -->
 <section class="rs-why-choose-area mt-100 section-space rs-why-choose-four">
-    <div class="rs-why-choose-bg-thumb" data-background="/images/bg/why-choose-bg-02.png">
+    <div class="rs-why-choose-bg-thumb" data-background="/images/teraxo/hm-banner.jpg">
     </div>
     <div class="container" style="position: relative; z-index: 2;">
         <div class="row justify-content-end">
